<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/menu_news"
        android:icon="@drawable/news"
        android:title="@string/menu_news"
        android:orderInCategory="1"
        app:showAsAction="always"/>

    <item
        android:id="@+id/menu_calendar"
        android:icon="@drawable/calendar"
        android:title="@string/menu_calendar"
        android:orderInCategory="2"
        app:showAsAction="always"/>

    <item
        android:id="@+id/menu_workshops"
        android:icon="@drawable/workshops"
        android:title="@string/menu_workshops"
        android:orderInCategory="3"
        app:showAsAction="always"/>

    <item
        android:id="@+id/menu_maps"
        android:icon="@drawable/maps"
        android:title="@string/menu_maps"
        android:orderInCategory="3"
        app:showAsAction="always"/>

    <item
        android:id="@+id/menu_settings"
        android:orderInCategory="100"
        android:title="@string/menu_settings"
        app:showAsAction="never" />
</menu>
