<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fadeScrollbars="false"
    android:scrollbarThumbVertical="@color/iswib_color_4_transparent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/dialog_location_height"
            android:background="@drawable/header"
            android:gravity="center"
            android:textSize="@dimen/dialog_location_textsize"
            android:layout_marginBottom="5dp"
            android:textColor="@color/white"
            android:text="@string/maps_location_workshops"
            android:tag="@string/maps_location_workshops"
            android:onClick="focusTo"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/dialog_location_height"
            android:background="@drawable/header"
            android:gravity="center"
            android:textSize="@dimen/dialog_location_textsize"
            android:layout_marginBottom="5dp"
            android:textColor="@color/white"
            android:text="@string/maps_location_openingceremony"
            android:tag="@string/maps_location_openingceremony"
            android:onClick="focusTo"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/dialog_location_height"
            android:background="@drawable/header"
            android:gravity="center"
            android:textSize="@dimen/dialog_location_textsize"
            android:layout_marginBottom="5dp"
            android:textColor="@color/white"
            android:text="@string/maps_location_closingceremony"
            android:tag="@string/maps_location_closingceremony"
            android:onClick="focusTo"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/dialog_location_height"
            android:background="@drawable/header"
            android:gravity="center"
            android:textSize="@dimen/dialog_location_textsize"
            android:layout_marginBottom="5dp"
            android:textColor="@color/white"
            android:text="@string/maps_location_countryfair"
            android:tag="@string/maps_location_countryfair"
            android:onClick="focusTo"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/dialog_location_height"
            android:background="@drawable/header"
            android:gravity="center"
            android:textSize="@dimen/dialog_location_textsize"
            android:layout_marginBottom="5dp"
            android:textColor="@color/white"
            android:text="@string/maps_location_artnight"
            android:tag="@string/maps_location_artnight"
            android:onClick="focusTo"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/dialog_location_height"
            android:background="@drawable/header"
            android:gravity="center"
            android:textSize="@dimen/dialog_location_textsize"
            android:layout_marginBottom="5dp"
            android:textColor="@color/white"
            android:text="@string/maps_location_flagparade"
            android:tag="@string/maps_location_flagparade"
            android:onClick="focusTo"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/dialog_location_height"
            android:background="@drawable/header"
            android:gravity="center"
            android:textSize="@dimen/dialog_location_textsize"
            android:layout_marginBottom="5dp"
            android:textColor="@color/white"
            android:text="@string/maps_location_welcome"
            android:tag="@string/maps_location_welcome"
            android:onClick="focusTo"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/dialog_location_height"
            android:background="@drawable/header"
            android:gravity="center"
            android:textSize="@dimen/dialog_location_textsize"
            android:layout_marginBottom="5dp"
            android:textColor="@color/white"
            android:text="@string/maps_location_speakup"
            android:tag="@string/maps_location_speakup"
            android:onClick="focusTo"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/dialog_location_height"
            android:background="@drawable/header"
            android:gravity="center"
            android:textSize="@dimen/dialog_location_textsize"
            android:layout_marginBottom="5dp"
            android:textColor="@color/white"
            android:text="@string/maps_location_farewell"
            android:tag="@string/maps_location_farewell"
            android:onClick="focusTo"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/dialog_location_height"
            android:background="@drawable/header"
            android:gravity="center"
            android:textSize="@dimen/dialog_location_textsize"
            android:layout_marginBottom="5dp"
            android:textColor="@color/white"
            android:text="@string/maps_location_monparty"
            android:tag="@string/maps_location_monparty"
            android:onClick="focusTo"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/dialog_location_height"
            android:background="@drawable/header"
            android:gravity="center"
            android:textSize="@dimen/dialog_location_textsize"
            android:layout_marginBottom="5dp"
            android:textColor="@color/white"
            android:text="@string/maps_location_kafana"
            android:tag="@string/maps_location_kafana"
            android:onClick="focusTo"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/dialog_location_height"
            android:background="@drawable/header"
            android:gravity="center"
            android:textSize="@dimen/dialog_location_textsize"
            android:layout_marginBottom="5dp"
            android:textColor="@color/white"
            android:text="@string/maps_location_ada"
            android:tag="@string/maps_location_ada"
            android:onClick="focusTo"/>
    </LinearLayout>
</ScrollView>