<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="@dimen/dialog_day_height"
            android:layout_marginBottom="15dp"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="@drawable/ripple_blue"
            android:gravity="center"
            android:onClick="pickDay"
            android:tag="9"
            android:text="@string/day_1"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:background="@drawable/ripple_blue"
            android:text="@string/day_6"
            android:layout_width="0dp"
            android:layout_height="@dimen/dialog_day_height"
            android:layout_marginBottom="15dp"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_weight="1"
            android:onClick="pickDay"
            android:tag="14" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_height="@dimen/dialog_day_height"
            android:layout_marginBottom="15dp"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="@drawable/ripple_blue"
            android:gravity="center"
            android:onClick="pickDay"
            android:tag="10"
            android:text="@string/day_2"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:background="@drawable/ripple_blue"
            android:text="@string/day_7"
            android:layout_width="0dp"
            android:layout_height="@dimen/dialog_day_height"
            android:layout_marginBottom="15dp"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_weight="1"
            android:onClick="pickDay"
            android:tag="15" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:background="@drawable/ripple_blue"
            android:text="@string/day_3"
            android:layout_width="0dp"
            android:layout_height="@dimen/dialog_day_height"
            android:layout_marginBottom="15dp"
            android:layout_marginRight="5dp"
            android:layout_marginEnd="5dp"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_weight="1"
            android:onClick="pickDay"
            android:tag="11" />

        <TextView
            android:background="@drawable/ripple_blue"
            android:text="@string/day_8"
            android:layout_width="0dp"
            android:layout_height="@dimen/dialog_day_height"
            android:layout_marginBottom="15dp"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_weight="1"
            android:onClick="pickDay"
            android:tag="16" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:background="@drawable/ripple_blue"
            android:text="@string/day_4"
            android:layout_width="0dp"
            android:layout_height="@dimen/dialog_day_height"
            android:layout_marginBottom="15dp"
            android:layout_marginRight="5dp"
            android:layout_marginEnd="5dp"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_weight="1"
            android:onClick="pickDay"
            android:tag="12" />

        <TextView
            android:background="@drawable/ripple_blue"
            android:text="@string/day_9"
            android:layout_width="0dp"
            android:layout_height="@dimen/dialog_day_height"
            android:layout_marginBottom="15dp"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_weight="1"
            android:onClick="pickDay"
            android:tag="17" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:background="@drawable/ripple_blue"
            android:text="@string/day_5"
            android:layout_width="0dp"
            android:layout_height="@dimen/dialog_day_height"
            android:layout_marginBottom="15dp"
            android:layout_marginRight="5dp"
            android:layout_marginEnd="5dp"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_weight="1"
            android:onClick="pickDay"
            android:tag="13" />

        <TextView
            android:background="@drawable/ripple_blue"
            android:text="@string/today"
            android:layout_width="0dp"
            android:layout_height="@dimen/dialog_day_height"
            android:layout_marginBottom="15dp"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_weight="1"
            android:onClick="pickDay"
            android:tag="18" />
    </LinearLayout>

</LinearLayout>