<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".news.NewsActivity"
    android:id="@+id/news_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/news_scroll" >

        <LinearLayout
            android:id="@+id/news_parent"
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/main_news"
                android:background="@drawable/header"
                android:gravity="center"
                android:textSize="35sp"
                android:textColor="@color/white"
                android:textStyle="bold"/>

            <LinearLayout
                android:id="@+id/news_container"
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">
            </LinearLayout>

            <Button
                android:id="@+id/news_button"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/news_more"
                android:background="@drawable/ripple_pink"
                android:textColor="#ffffff"
                android:textStyle="bold"
                android:onClick="executeNewsDownloaderTask"
                android:visibility="invisible" />
        </LinearLayout>
    </ScrollView>
    <RelativeLayout
        android:id="@+id/news_update"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:background="@drawable/footer">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/update_info"
            android:gravity="start|center_vertical"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:textColor="@color/white" />

        <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="30dp"
            android:layout_marginRight="30dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />
    </RelativeLayout>
</RelativeLayout>