<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:contentDescription="@string/image_description"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:src="@drawable/iswib"
            android:contentDescription="@string/image_description"
            android:background="@color/white_transparent"
            android:scaleType="centerCrop" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.5">

                <LinearLayout
                    android:tag="1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_toLeftOf="@+id/main_strut_top"
                    android:layout_toStartOf="@+id/main_strut_top"
                    android:background="@color/iswib_color_1"
                    android:onClick="goTo">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:paddingTop="20dp"
                        android:contentDescription="@string/image_description"
                        android:layout_weight=".7"
                        android:src="@drawable/news_active"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight=".3"
                        android:textSize="20sp"
                        android:text="@string/main_news"
                        android:gravity="center"
                        android:textColor="@color/white"
                        android:textStyle="bold"/>

                </LinearLayout>

                <View
                    android:id="@+id/main_strut_top"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_centerHorizontal="true"/>

                <LinearLayout
                    android:tag="2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_toRightOf="@+id/main_strut_top"
                    android:layout_toEndOf="@+id/main_strut_top"
                    android:background="@color/iswib_color_4"
                    android:onClick="goTo">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:paddingTop="20dp"
                        android:contentDescription="@string/image_description"
                        android:layout_weight=".7"
                        android:src="@drawable/calendar_active"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight=".3"
                        android:textSize="20sp"
                        android:text="@string/main_calendar"
                        android:gravity="center"
                        android:textColor="@color/white"
                        android:textStyle="bold"/>

                </LinearLayout>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.5">

                <LinearLayout
                    android:tag="3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_toLeftOf="@+id/main_strut_bottom"
                    android:layout_toStartOf="@+id/main_strut_bottom"
                    android:background="@color/iswib_color_3"
                    android:onClick="goTo">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:paddingTop="20dp"
                        android:contentDescription="@string/image_description"
                        android:layout_weight=".7"
                        android:src="@drawable/workshops_active"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight=".3"
                        android:textSize="20sp"
                        android:text="@string/main_workshops"
                        android:gravity="center"
                        android:textColor="@color/white"
                        android:textStyle="bold"/>

                </LinearLayout>

                <View
                    android:id="@+id/main_strut_bottom"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_centerHorizontal="true"/>

                <LinearLayout
                    android:tag="4"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_toRightOf="@+id/main_strut_bottom"
                    android:layout_toEndOf="@+id/main_strut_bottom"
                    android:background="@color/iswib_color_2"
                    android:onClick="goTo">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:paddingTop="20dp"
                        android:contentDescription="@string/image_description"
                        android:layout_weight=".7"
                        android:src="@drawable/maps_active"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight=".3"
                        android:textSize="20sp"
                        android:text="@string/main_maps"
                        android:gravity="center"
                        android:textColor="@color/white"
                        android:textStyle="bold"/>

                </LinearLayout>
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>
</FrameLayout>